--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iq-test-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yashgaur01.github.io/IQScalar",
   "dependencies": {
     "@clerk/clerk-react": "^5.39.0",
     "@testing-library/dom": "^10.4.1",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6"
   }
 }
