--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jspdf": "^3.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^2.1.4"
